change color and fix code
フォントの色を変更し、CSSとHTMLの紐づけを修正しました。

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>HTMLのサンプル</title>
-        <link rel="stylesheet" type="text/css" href=".\index.html">
+        <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
         <h1>aiueo</h1>
+        <p id="red">チームで作成するWEBサイトです</p>
     </body>
 
