最初のページの枠組み

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>HTMLのサンプル</title>
+        <title>アーティスト紹介</title>
         <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
-        <h1>aiueo</h1>
+        <h2>アーティスト1</h2>
+        <h2>アーティスト2</h2>
+        <h2>アーティスト3</h2>
         <p id="red">チームで作成するWEBサイトです</p>
     </body>
 
