タイトル追加

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
+        <h1>アーティスト紹介</h1>
         <h2>アーティスト1</h2>
         <h2>アーティスト2</h2>
         <h2>アーティスト3</h2>
