--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>アーティスト紹介</h1>
         <h2>アーティスト1</h2>
         <h2>アーティスト2</h2>
-        <h2>アーティスト3</h2>
+        <h2><a href='artist3.html'>アーティスト3</a></h2>
         <p id="red">チームで作成するWEBサイトです</p>
     </body>
 
