アーティスト１，２のリンクの追加

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <h1>アーティスト紹介</h1>
-        <h2>アーティスト1</h2>
-        <h2>アーティスト2</h2>
+        <h2><a href='artist1.html'>アーティスト1</a></h2>
+        <h2><a href='artist2.html'>アーティスト2</a></h2>
         <h2><a href='artist3.html'>アーティスト3</a></h2>
         <p id="red">チームで作成するWEBサイトです</p>
     </body>
