--- a/index.html
+++ b/index.html
@@ -11,5 +11,18 @@
         <h2>アーティスト2</h2>
         <h2>アーティスト3</h2>
         <p id="red">チームで作成するWEBサイトです</p>
+        <img
+        src="https://www.creephyp.com/static/creephyp/contents/upimg/cb723y5t23qyrcb238y3np4c92c4tp49nc.jpg" alt="クリープハイプの画像です。" class="image">
+        <p></p>
+        <p></p>
+        <img
+        src="https://kai-you.net/img_words/845902/5efd92491ec0074e01fdc87c146bf1a6.jpeg" alt="ずっと真夜中でいいのにの画像です。" class="image">
+        <p></p>
+        <p></p> 
+        <img
+        src="https://upload.wikimedia.org/wikipedia/commons/e/e9/BUMPOFCHICKEN_spaceshower.jpg" alt="BUMP OF CHICKENの画像です。" class="image">
+        <p></p>
+        <p></p>
+
     </body>
 
