--- a/artist3.html
+++ b/artist3.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <body>アーティスト３</body>
+  <head><link rel="stylesheet" type="text/css" href="artist3.css" /></head>
+  <body>
+    <h2>アーティスト３</h2>
+    <div class="container">
+      <div class="item">アーティスト３</div>
+      <div class="item">メンバー</div>
+    </div>
+  </body>
 </html>
