--- a/artist3.html
+++ b/artist3.html
@@ -2,9 +2,9 @@
 <html lang="ja">
   <head><link rel="stylesheet" type="text/css" href="artist3.css" /></head>
   <body>
-    <h2>アーティスト３</h2>
+    <p id="artist_name">アーティスト</p>
     <div class="container">
-      <div class="item">アーティスト３</div>
+      <div class="item">アーティスト3</div>
       <div class="item">メンバー</div>
     </div>
   </body>
