--- a/artist3.html
+++ b/artist3.html
@@ -3,9 +3,7 @@
   <head><link rel="stylesheet" type="text/css" href="artist3.css" /></head>
   <body>
     <p id="artist_name">アーティスト</p>
-    <div class="container">
-      <div class="item">アーティスト3</div>
-      <div class="item">メンバー</div>
-    </div>
+    <div class="item">アーティスト3</div>
+    <p><div class="member">メンバー</div></p>
   </body>
 </html>
