--- a/artist3.html
+++ b/artist3.html
@@ -2,8 +2,11 @@
 <html lang="ja">
   <head><link rel="stylesheet" type="text/css" href="artist3.css" /></head>
   <body>
-    <p id="artist_name">アーティスト</p>
-    <div class="item">アーティスト3</div>
-    <p><div class="member">メンバー</div></p>
+    <p id="artist_name">ずっと真夜中でいいのに。</p>
+    <div class="member">
+      <p>メンバー</p>
+    </div>
+    <img
+      src="https://kai-you.net/img_words/845902/5efd92491ec0074e01fdc87c146bf1a6.jpeg" class="img">
   </body>
 </html>
