--- a/artist3.html
+++ b/artist3.html
@@ -8,5 +8,8 @@
     </div>
     <img
       src="https://kai-you.net/img_words/845902/5efd92491ec0074e01fdc87c146bf1a6.jpeg" class="img">
+      <div class="feature">
+        <p>特徴</p>
+      </div>
   </body>
 </html>
