--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
             <ul>
                 <a href='artist1.html'>クリープハイプ</a>
-                <a href='artist2.html'>ずっと真夜中でいいのに</a>
-                <a href='artist3.html'>BUMP OF CHICKEN</a>
+                <a href='artist2.html'>BUMP OF CHICKEN</a>
+                <a href='artist3.html'>ずっと真夜中でいいのに。</a>
                 
     </body>
 
