--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <img
             src="https://www.creephyp.com/static/creephyp/contents/upimg/cb723y5t23qyrcb238y3np4c92c4tp49nc.jpg" alt="クリープハイプの画像です。" class="image">
             <img
-            src="https://kai-you.net/img_words/845902/5efd92491ec0074e01fdc87c146bf1a6.jpeg" alt="ずっと真夜中でいいのにの画像です。" class="image">
-            <img
             src="https://upload.wikimedia.org/wikipedia/commons/e/e9/BUMPOFCHICKEN_spaceshower.jpg" alt="BUMP OF CHICKENの画像です。" class="image">
+            <img
+            src="https://kai-you.net/img_words/845902/5efd92491ec0074e01fdc87c146bf1a6.jpeg" alt="ずっと真夜中でいいのに。の画像です。" class="image">
         </div>
             <ul>
                 <a href='artist1.html'>クリープハイプ</a>
