--- a/artist1.html
+++ b/artist1.html
@@ -1,4 +1,33 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <body>アーティスト１</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>クリープハイプ</title>
+    <link rel="stylesheet" href="artist1.css">
+  </head>
+  <body>
+    <header>
+        <h1>クリープハイプ</h1>
+    </header>
+    <div class="container">
+      <div class="image-section">
+        <img src="https://www.creephyp.com/static/creephyp/contents/upimg/cb723y5t23qyrcb238y3np4c92c4tp49nc.jpg" alt="クリープハイプの画像">
+      </div>
+      <div class="info-section">
+        <h2>メンバー紹介</h2>
+        <ul>
+            <li></li>
+        </ul>
+        <h2>特徴</h2>
+        <p>アーティストの特徴</p>
+        <h2>有名な曲</h2>
+        <ul>
+          <li>1</li>
+          <li>2</li>
+          <li>3  など</li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
