--- a/artist2.html
+++ b/artist2.html
@@ -1,4 +1,33 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <body>アーティスト２</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BUMP OF CHICKEN。</title>
+    <link rel="stylesheet" href="artist2.css">
+  </head>
+  <body>
+    <header>
+        <h1>BUMP OF CHICKEN</h1>
+    </header>
+    <div class="container">
+      <div class="image-section">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/e/e9/BUMPOFCHICKEN_spaceshower.jpg" alt="BUMP OF CHICKENの画像">
+      </div>
+      <div class="info-section">
+        <h2>メンバー紹介</h2>
+        <ul>
+            <li>メンバー</li>
+        </ul>
+        <h2>特徴</h2>
+        <p>アーティストの特徴</p>
+        <h2>有名な曲</h2>
+        <ul>
+          <li>1</li>
+          <li>2</li>
+          <li>3  など</li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
