--- a/artist3.html
+++ b/artist3.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ずっと真夜中でいいのに。</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="artist3.css">
+  </head>
+  <body>
     <header>
         <h1>ずっと真夜中でいいのに。</h1>
     </header>
     <div class="container">
-        <div class="image-section">
-            <img src="https://kai-you.net/img_words/845902/5efd92491ec0074e01fdc87c146bf1a6.jpeg" alt="ずとまよの画像">
-        </div>
-        <div class="info-section">
-            <h2>メンバー紹介</h2>
-            <ul>
-                <li>メンバー</li>
-            </ul>
-            <h2>特徴</h2>
-            <p>特徴の説明</p>
-            <h2>人気曲</h2>
-            <ul>
-                <li>人気曲1</li>
-                <li>人気曲2</li>
-                <li>人気曲3</li>
-            </ul>
-        </div>
+      <div class="image-section">
+        <img src="https://kai-you.net/img_words/845902/5efd92491ec0074e01fdc87c146bf1a6.jpeg" alt="ずとまよの画像">
+      </div>
+      <div class="info-section">
+        <h2>メンバー紹介</h2>
+        <ul>
+            <li>vocal & lirics & Music - ACAね</li>
+        </ul>
+        <h2>特徴</h2>
+        <p>「ずっと真夜中でいいのに。」は作詞作曲ボーカルACAねによるミステリアスなバンドです。<br>
+            メンバーは特定の形を持たず、電化製品を改造して特殊な楽器編成をします。
+        </p>
+        <h2>有名な曲</h2>
+        <ul>
+          <li>秒針を噛む</li>
+          <li>お勉強しといてよ</li>
+          <li>あいつら全員同窓会  など</li>
+        </ul>
+      </div>
     </div>
-</body>
+  </body>
 </html>
