--- a/artist3.html
+++ b/artist3.html
@@ -29,6 +29,12 @@
           <li>お勉強しといてよ</li>
           <li>あいつら全員同窓会  など</li>
         </ul>
+        <h2>おすすめの曲</h2>
+        <ul>
+          <li>ミラーチューン</li>
+          <li>残機</li>
+          <li>あいつら全員同窓会</li>
+        </ul>
       </div>
     </div>
   </body>
